<resources>
    <string name="app_name">MayBE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ng_nh_p_ng_k">Đăng nhập/Đăng ký</string>
    <string name="t_i_kho_n">Tài khoản</string>
    <string name="logo_account">logo_account</string>
    <string name="s_n_ph_m_th_ng_hi_u_v_m_i_th_b_n_c_n">Sản phẩm, thương hiệu và mọi thứ bạn cần</string>
    <string name="b_n_mu_n_giao_h_ng_t_i_u">Bạn muốn giao hàng tới đâu?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_sale">Sản phẩm khuyến mãi</string>
    <string name="type_sale">sale</string>
    <string name="title_old_phone">Cũ giá rẻ</string>
    <string name="type_old_phone">old_phone</string>
    <string name="title_accessories">Phụ kiện</string>
    <string name="type_accessories">accessories</string>
    <string name="title_laptop">Laptop</string>
    <string name="type_laptop">laptop</string>
    <string name="title_tablet">Tablet</string>
    <string name="type_tablet">tablet</string>
    <string name="type_phone">phone</string>
    <string name="title_phone">Điện thoại</string>
    <string name="title_category_phone">Danh mục sản phẩm</string>
    <string name="danh_muc_chinh">Danh mục chính</string>
    <string name="san_pham_da_xem">Sản phẩm đã xem</string>
    <string name="see_more">Xem tất cả</string>
    <string name="login_register">Đăng nhập/Đăng ký</string>
    <string name="title_question_product">Hỏi đáp về sản phẩm</string>
    <string name="mo_ta_san_pham">Mô tả sản phẩm</string>
    <string name="xem_chi_tiet">Xem chi tiết</string>
    <string name="thong_tin_chi_tiet">Thông tin chi tiết</string>
    <string name="product_hot">Sản phẩm nổi bật</string>
    <string name="no_item">Bạn chưa có sản phẩm nào !</string>
    <string name="phu_kien_di_kem">Ưu đãi khi mua phụ kiện</string>
    <string name="sale">Khuyến mại</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="log_in">Đăng nhập</string>
    <string name="lost_pass">Quên mật khẩu?</string>
    <string name="with_login">Hoặc đăng nhập với</string>
    <string name="content">content</string>
    <string name="name">Họ và tên</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="khi_ng_k_l_b_n_ch_p_nh_n">Khi đăng ký là bạn đã chấp nhận</string>
    <string name="i_u_kho_n_s_d_ng">Điều khoản sử dụng</string>
    <string name="msg_location">location</string>
    <string name="khuyen_mai">15 khuyến mãi hot nhất</string>
    <string name="see_all">Xem tất cả</string>
    <string name="title_phone_highlight">Điện thoại nổi bật nhất</string>
    <string name="title_laptop_highlight">tablet - laptop nổi bật nhất</string>
    <string name="title_accessories_hl">phụ kiện giá rẻ</string>
    <string name="title_detail_info">Thông tin chi tiết</string>
    <string name="comment">Viết nhận xét</string>
    <string name="title_add_image">Thêm hình sản phẩm thực tế nếu bạn muốn</string>
    <string name="title_comment">Tiêu đề (không bắt buộc)</string>
    <string name="comment_of_u">Đánh giá của bạn</string>
    <string name="send">Gửi bình luận</string>
    <string name="default_percent">0%</string>
    <string name="category">category</string>
    <string name="title_add_to_cart">Sản phẩm đã được thêm vào giỏ hàng</string>
    <string name="view_cart">Xem giỏ hàng</string>
    <string name="title_my_cart">Giỏ hàng của tôi</string>
    <string name="go_to_shopping">Go to shopping</string>
    <string name="payment">Thanh toán</string>
    <string name="total_money">Tổng số tiền :</string>
    <string name="title_continue">Tiếp tục</string>
    <string name="location_address">Địa chỉ nhận hàng</string>
    <string name="title_add_new_location">Thêm địa chỉ mới</string>
    <string name="type_delivery">Hình thức giao hàng</string>
    <string name="type_payment">Hình thức thanh toán</string>
    <string name="sign_in">Đăng ký</string>
    <string name="delete_address">Bạn muốn xóa địa chỉ này?</string>
    <string name="title_alert">Thông báo</string>
    <string name="title_yes">Có</string>
    <string name="title_no">Không</string>
    <string name="title_address_order">Địa chỉ nhận hàng</string>
    <string name="title_confirm">Xác nhận</string>
    <string name="title_payment">Thanh toán</string>
    <string name="format_date">dd-MM-yyyy</string>
    <string name="format_hour">HH:mm</string>
    <string name="info_user">Thông tin người dùng</string>
    <string name="log_in_sign_in">Đăng nhập/đăng ký</string>
    <string name="title_time_user">Thành viên từ %s</string>
    <string name="alert_sign_out">Đăng xuất...</string>
    <string name="title_birth_day">Ngày sinh</string>
    <string name="finded_product">Tìm thấy %d sản phẩm</string>
    <string name="no_rating">Chưa có đánh giá</string>

    <string-array name="shopping_item">
        <item>Sắp xếp theo tên</item>
        <item>Sắp xếp theo giá</item>
        <item>Sắp xếp theo đánh giá</item>
    </string-array>
</resources>
