<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".screen.phone.detail_product.CommentFragment">

    <RelativeLayout
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dimen_16"
            android:contentDescription="@string/content"
            android:src="@drawable/ic_close_black_24dp" />

        <TextView
            android:id="@+id/text_title_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ic_back"
            android:fontFamily="@font/sanfranciscodisplay_semibold"
            android:text="@string/comment"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen_text_16" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90"
                android:layout_margin="@dimen/dimen_10">

                <ImageView
                    android:id="@+id/image_phone"
                    android:layout_width="@dimen/dimen_100"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/image_phone"
                    android:fontFamily="@font/sanfranciscodisplay_medium"
                    android:textSize="@dimen/dimen_text_16" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0_5dp"
                android:background="#d4cdcd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_10"
                android:fontFamily="@font/sanfranciscodisplay_regular"
                android:text="@string/comment_of_u"
                android:textSize="@dimen/dimen_text_14" />

            <RatingBar
                android:id="@+id/rating_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_5" />

            <RelativeLayout
                android:id="@+id/relative_choose_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_margin="@dimen/dimen_10"
                android:background="@color/color_blue_gray_300"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_choose"
                    android:layout_width="@dimen/dimen_50"
                    android:layout_height="@dimen/dimen_50"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <ImageView
                    android:id="@+id/image_comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:fontFamily="@font/sanfranciscodisplay_regular"
                    android:hint="@string/title_comment"
                    android:textSize="@dimen/dimen_text_14" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:fontFamily="@font/sanfranciscodisplay_regular"
                    android:hint="@string/comment"
                    android:inputType="text"
                    android:textSize="@dimen/dimen_text_14" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/relative_send_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/custom_button1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dimen_10"
            android:fontFamily="@font/sanfranciscodisplay_semibold"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>